# apyrat

./: AUTHORS.rst  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: pypi-chart.yml  test.yml
apyrat/: __about__.py  __init__.py  apyrat.py  cli.py  utils.py
src/: apyrat.py  cli.py  utils.py
tests/: __init__.py  cli_test.py  test_apyrat.py
